--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,8 +87,12 @@
             <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
 
+
+
         <activity android:name=".PathGoogleMapActivity" />
         <activity android:name=".PlaceDetailsActivity" />
+        <activity android:name=".Suggestions"></activity>
+
         <activity android:name=".ChatBot" />
         <activity android:name=".ChatBotMaps"></activity>
     </application>
