--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,13 +56,12 @@
         </intent-filter>
 
         <activity
-            android:name=".dashboard"
-            android:label="@string/title_activity_dashboard"
+            android:name=".Dashboard"
+            android:label="@string/title_activity_Dashboard"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <intent-filter>
-            <action android:name="india.collageapp.com.get_a_way.dashboard" />
-
+            <action android:name="india.collageapp.com.get_a_way.Dashboard" />
             <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
 
@@ -83,7 +82,6 @@
 
         <intent-filter>
             <action android:name="india.collageapp.com.get_a_way.MainMaps" />
-
             <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
 
@@ -93,7 +91,6 @@
         <activity android:name=".PlaceDetailsActivity" />
         <activity android:name=".Suggestions"></activity>
         <activity android:name=".DisplayAllPlaces"></activity>
-
         <activity android:name=".ChatBot" />
         <activity android:name=".ChatBotMaps"></activity>
     </application>
