--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
         android:name="com.truiton.placeapiautocomplete.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <uses-permission android:name="com.truiton.placeapiautocomplete.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -62,6 +65,7 @@
 
         <intent-filter>
             <action android:name="india.collageapp.com.get_a_way.Dashboard" />
+
             <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
 
@@ -82,17 +86,25 @@
 
         <intent-filter>
             <action android:name="india.collageapp.com.get_a_way.MainMaps" />
+
             <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
 
-
-
         <activity android:name=".PathGoogleMapActivity" />
         <activity android:name=".PlaceDetailsActivity" />
-        <activity android:name=".Suggestions"></activity>
-        <activity android:name=".DisplayAllPlaces"></activity>
+        <activity android:name=".Suggestions" />
+        <activity android:name=".DisplayAllPlaces" />
         <activity android:name=".ChatBot" />
-        <activity android:name=".ChatBotMaps"></activity>
+        <activity android:name=".ChatBotMaps" />
+        <activity
+            android:name=".Emergency"
+            android:label="@string/title_activity_emergency"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <service
+            android:name=".ChatHeadService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
